--- a/ch3.html
+++ b/ch3.html
@@ -1,5 +1,7 @@
 <html>
 <title>CryT: Checkpoint 3</title>
+<center>
 <p>Welcome To CryT KeySystem Checkpoint 3</p>
-<button href="https://linkvertise.com/449722/checkpoint-3/">Continue</button>
+<a href="https://linkvertise.com/449722/checkpoint-3/"><button>Continue</button></a>
+</center>
 </html>
