--- a/ch2.html
+++ b/ch2.html
@@ -1,5 +1,7 @@
 <html>
-<title>CryT: Checkpoint 2</title>
+<title>CryT: Checkpoint 3</title>
+<center>
 <p>Welcome To CryT KeySystem Checkpoint 2</p>
-<button href="https://direct-link.net/449722/checkpoint-2">Continue</button>
+<a href="https://direct-link.net/449722/checkpoint-2"><button>Continue</button></a>
+</center>
 </html>
