--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <title>CryT: Checkpoint 1</title>
+  <center>
 <p>Welcome To CryT KeySystem Checkpoint 1</p>
-<button href="">Continue</button>
+<a href="https://link-target.net/449722/checkpoint-1"><button>Continue</button></a>
+ </center>
 </html>
